v160
(xx/01/18)

Image Modifications:

Changes / Improvements / Optimizations:
General | We have completed much needed backbone work for DietPi, which will allow for improved expansion in source code. This includes the use of dietpi-globals.
DietPi-Globals | New script which optimizes most used DietPi commands and vars, throughout our scripts. Also exported to bash session, please type 'G_' then press 'TAB' to see a full list of options.
General | Start of FHS compliance: https://github.com/Fourdee/DietPi/issues/1297#issuecomment-352241193
General | wget: Now set to prefer IPv4 by default (generally faster): https://github.com/Fourdee/DietPi/issues/1285#issuecomment-353230187
General | APT: Now set to force IPv4 by default (generally faster): https://github.com/Fourdee/DietPi/issues/1285#issuecomment-353230187
General | SparkySBC: CPU gov default changed to Performance, reports of increased stability.
DietPi-Boot | Improved the method of initial FS_partition and FS_expansion during 1st run, via systemD services. 'fs_force_resize=' in dietpi.txt is no longer supported: https://github.com/Fourdee/DietPi/issues/1285#issuecomment-352159930
DietPi-Banner | IP: Will now also list the active network adapter used (eg: eth0/wlan0)
DietPi-Config | Dion Audio LOCO V1/V2: Soundcards added for RPi.
DietPi-Drive_Manager | Added support for exFAT, many thanks @MichaIng : https://github.com/Fourdee/DietPi/pull/1312
DietPi-Globals | Global variables and functions are now exported during login. Please see the sourcecode for more information: https://github.com/Fourdee/DietPi/issues/1311
DietPi-Set_Hardware | Sparky SBC: enable aotg.aotg1_speed compatibility setting for USB 1.1, when USB-DAC configured: https://github.com/Fourdee/DietPi/issues/1301
DietPi-Software | NAA Daemon: Updated to latest (3.5.2-36). Existing installs will be patched automatically: https://github.com/Fourdee/DietPi/issues/1305