@@ -7,7 +7,7 @@
 	# Created by Daniel Knight / daniel.knight@dietpi.com / dietpi.com
 	#
 	# Info:
-	# - Location /etc/dietpi/dietpi-software/services/brutefir
+	# - Location /var/lib/dietpi/dietpi-software/services/brutefir
 	# - Called from /DietPi/dietpi/dietpi-services
 	#
 	#////////////////////////////////////
