@@ -7,7 +7,7 @@
 	# Created by Daniel Knight / daniel.knight@dietpi.com / dietpi.com
 	#
 	# Info:
-	# - Location /etc/dietpi/dietpi-software/services/raspimjpeg.service
+	# - Location /var/lib/dietpi/dietpi-software/services/raspimjpeg.service
 	# - Allows service control for Raspimjpeg and PHP schedule, used by RPI Camera Web
 	# - Called from /DietPi/dietpi/dietpi-services
 	#
