@@ -62,21 +62,6 @@
 
 	}
 
-	Xmas_Print(){
-
-		echo -e "        \e[31m^\e[0m
-       \e[31m*\e[0m\e[38;5;154m#\e[31m*\e[0m
-      \e[31m*\e[0m\e[38;5;154m###\e[31m*\e[0m          \e[90m Lightweight Xmas Justice Tips:\e[0m
-     \e[31m*\e[0m\e[38;5;154m#####\e[31m*\e[0m         \e[90m - Be good, Amazon do sell coal.\e[0m
-    \e[31m*\e[0m\e[38;5;154m#######\e[31m*\e[0m        \e[90m - Cherish every moment, even the awkward family gatherings ;)\e[0m
-   \e[31m*\e[0m\e[38;5;154m#########\e[31m*\e[0m       \e[90m - 'Ho Ho Ho, Green Giant' swaps his job! \e[0m
-  \e[31m*\e[0m\e[38;5;154mMerry  Xmas\e[31m*\e[0m
- \e[31m*\e[0m\e[38;5;154m#############\e[31m*\e[0m     \e[90m All the best from everyone at DietPi =)) \e[0m
-       \e[100m   \e[0m
-"
-
-	}
-
 	#/////////////////////////////////////////////////////////////////////////////////////
 	#Top section additional Text. Update available / MOTD etc
 	#/////////////////////////////////////////////////////////////////////////////////////
@@ -162,7 +147,6 @@
 		Banner_TopText_Extras
 		Banner_Dietpi
 		Credits_Print
-		Xmas_Print
 	fi
 
 	#-----------------------------------------------------------------------------------
