@@ -3392,7 +3392,7 @@ _EOF_
 
 			systemctl stop dietpi-wifi-monitor.service
 			rm /etc/systemd/system/dietpi-wifi-monitor.service
-			rm /etc/dietpi/dietpi-wifi-monitor.sh
+			rm /var/lib/dietpi/dietpi-wifi-monitor.sh
 			systemctl daemon-reload
 
 		fi
@@ -3401,7 +3401,7 @@ _EOF_
 
 	WiFi_Monitor_Enable(){
 
-		cat << _EOF_ > /etc/dietpi/dietpi-wifi-monitor.sh
+		cat << _EOF_ > /var/lib/dietpi/dietpi-wifi-monitor.sh
 #!/bin/bash
 {
 URL_PING="$WIFI_GATEWAY"
@@ -3433,7 +3433,7 @@ exit 0
 }
 _EOF_
 
-		chmod +x /etc/dietpi/dietpi-wifi-monitor.sh
+		chmod +x /var/lib/dietpi/dietpi-wifi-monitor.sh
 
 		cat << _EOF_ > /etc/systemd/system/dietpi-wifi-monitor.service
 [Unit]
@@ -3441,7 +3441,7 @@ Description=Monitors loss of WiFi connection and automatically reconnects
 After=network.target network-online.target
 [Service]
 Type=simple
-ExecStart=/bin/bash -c /etc/dietpi/dietpi-wifi-monitor.sh
+ExecStart=/bin/bash -c /var/lib/dietpi/dietpi-wifi-monitor.sh
 [Install]
 WantedBy=multi-user.target
 _EOF_
@@ -5067,7 +5067,7 @@ Custom     : Write = $CUSTOM_WRITE | Read = $CUSTOM_READ\
 						#	Kill all existing, refresh now
 						killall -w /DietPi/dietpi/func/run_ntpd &> /dev/null
 						killall -w ntpd &> /dev/null
-						rm /etc/dietpi/.ntpd_exit_status &> /dev/null
+						rm /var/lib/dietpi/.ntpd_exit_status &> /dev/null
 						/DietPi/dietpi/func/run_ntpd status
 
 						#Return to this Menu
