@@ -35,7 +35,7 @@
 	#. /DietPi/dietpi/func/dietpi-globals # Not compatible until dietpi-boot.service
 	#Import DietPi-Globals ---------------------------------------------------------------
 
-	FILEPATH_DIETPI_RAMLOG_SAVE='/var/lib/dietpi/dietpi-ramlog_store'
+	FILEPATH_DIETPI_RAMLOG_SAVE='/var/lib/dietpi/dietpi-ramlog/storage'
 
 	#/////////////////////////////////////////////////////////////////////////////////////
 	#Funcs
