@@ -211,9 +211,9 @@
 		index=0
 		aDIETPISERVICE_FP=()
 		aDIETPISERVICE_NAME=()
-		aDIETPISERVICE_NAME[$index]='BruteFIR';aDIETPISERVICE_FP[$index]='/etc/dietpi/dietpi-software/services/brutefir.service';((index++));
-		aDIETPISERVICE_NAME[$index]='JackD';aDIETPISERVICE_FP[$index]='/etc/dietpi/dietpi-software/services/jackd.service';((index++));
-		aDIETPISERVICE_NAME[$index]='Jconvolver';aDIETPISERVICE_FP[$index]='/etc/dietpi/dietpi-software/services/jconvolver.service';((index++));
+		aDIETPISERVICE_NAME[$index]='BruteFIR';aDIETPISERVICE_FP[$index]='/var/lib/dietpi/dietpi-software/services/brutefir.service';((index++));
+		aDIETPISERVICE_NAME[$index]='JackD';aDIETPISERVICE_FP[$index]='/var/lib/dietpi/dietpi-software/services/jackd.service';((index++));
+		aDIETPISERVICE_NAME[$index]='Jconvolver';aDIETPISERVICE_FP[$index]='/var/lib/dietpi/dietpi-software/services/jconvolver.service';((index++));
 
 		for ((i=0; i<${#aDIETPISERVICE_NAME[@]}; i++))
 		do
@@ -290,9 +290,9 @@
 		index=0
 		aDIETPISERVICE_FP=()
 		aDIETPISERVICE_NAME=()
-		aDIETPISERVICE_NAME[$index]='RaspimJpeg';aDIETPISERVICE_FP[$index]='/etc/dietpi/dietpi-software/services/raspimjpeg.service';((index++));
-		aDIETPISERVICE_NAME[$index]='Deluge';aDIETPISERVICE_FP[$index]='/etc/dietpi/dietpi-software/services/deluge.service';((index++));
-		aDIETPISERVICE_NAME[$index]='SqueezeBox Server';aDIETPISERVICE_FP[$index]='/etc/dietpi/dietpi-software/services/squeezeboxserver.service';((index++));
+		aDIETPISERVICE_NAME[$index]='RaspimJpeg';aDIETPISERVICE_FP[$index]='/var/lib/dietpi/dietpi-software/services/raspimjpeg.service';((index++));
+		aDIETPISERVICE_NAME[$index]='Deluge';aDIETPISERVICE_FP[$index]='/var/lib/dietpi/dietpi-software/services/deluge.service';((index++));
+		aDIETPISERVICE_NAME[$index]='SqueezeBox Server';aDIETPISERVICE_FP[$index]='/var/lib/dietpi/dietpi-software/services/squeezeboxserver.service';((index++));
 
 		for ((i=0; i<${#aDIETPISERVICE_NAME[@]}; i++))
 		do
