@@ -148,7 +148,7 @@ _EOF_
 
 		killall -w /DietPi/dietpi/func/run_ntpd &> /dev/null
 		killall -w ntpd &> /dev/null
-		rm /etc/dietpi/.ntpd_exit_status &> /dev/null
+		rm /var/lib/dietpi/.ntpd_exit_status &> /dev/null
 
 	}
 
@@ -178,8 +178,8 @@ _EOF_
 						else
 
 							Reset_NTPD
-							echo 0 > /etc/dietpi/.ntpd_exit_status
-							echo 1 > /etc/dietpi/.ntpd_override
+							echo 0 > /var/lib/dietpi/.ntpd_exit_status
+							echo 1 > /var/lib/dietpi/.ntpd_override
 
 						fi
 
@@ -3309,11 +3309,14 @@ _EOF_
 		ln -sf /usr/share/applications/dietpi-launcher.desktop "$HOME"/Desktop/dietpi-launcher.desktop
 
 		#Download icons
-		mkdir -p /etc/dietpi/desktop_icons
-		wget http://dietpi.com/downloads/conf/desktop/dietpi-icon.png -O /etc/dietpi/desktop_icons/dietpi-icon.png
-		wget http://dietpi.com/downloads/conf/desktop/grey_16x16.png -O /etc/dietpi/desktop_icons/grey_16x16.png
-		wget http://dietpi.com/downloads/conf/desktop/kodi-icon.png -O /etc/dietpi/desktop_icons/kodi-icon.png
-		wget http://dietpi.com/downloads/conf/desktop/justboom.png -O /etc/dietpi/desktop_icons/justboom.png
+		mkdir -p /var/lib/dietpi/dietpi-software/installed/desktop_icons
+		wget http://dietpi.com/downloads/conf/desktop/dietpi-icon.png -O /var/lib/dietpi/dietpi-software/installed/desktop_icons/dietpi-icon.png
+		wget http://dietpi.com/downloads/conf/desktop/grey_16x16.png -O /var/lib/dietpi/dietpi-software/installed/desktop_icons/grey_16x16.png
+		wget http://dietpi.com/downloads/conf/desktop/kodi-icon.png -O /var/lib/dietpi/dietpi-software/installed/desktop_icons/kodi-icon.png
+		wget http://dietpi.com/downloads/conf/desktop/justboom.png -O /var/lib/dietpi/dietpi-software/installed/desktop_icons/justboom.png
+
+		# - Replace icon dir in .desktop from /etc/dietpi/desktop_icons
+		sed -i 's#^Icon=/etc/dietpi/desktop_icons#/var/lib/dietpi/dietpi-software/installed/desktop_icons#g' /var/lib/dietpi/dietpi-software/installed/desktop_icons/*.desktop
 
 		# - Set execute to prevent "untrusted" prompt in Mate, and possibily other desktops.
 		chmod +x /usr/share/applications/*
@@ -10251,7 +10254,7 @@ _EOF_
 			usermod -a -G video www-data
 
 			# - raspimjpeg/php schedule startup and control script
-			cp /DietPi/dietpi/conf/raspimjpeg.service /etc/dietpi/dietpi-software/services/raspimjpeg.service
+			cp /DietPi/dietpi/conf/raspimjpeg.service /var/lib/dietpi/dietpi-software/services/raspimjpeg.service
 
 			# - Setup Data directory
 			local dietpicam_media_directory=$G_FP_DIETPI_USERDATA
@@ -10270,7 +10273,7 @@ _EOF_
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
 
 			#copy init
-			cp /DietPi/dietpi/conf/deluge.service /etc/dietpi/dietpi-software/services/deluge.service
+			cp /DietPi/dietpi/conf/deluge.service /var/lib/dietpi/dietpi-software/services/deluge.service
 
 			#Generate deluge default config
 			deluged
@@ -10531,7 +10534,7 @@ _EOF_
 			rm /etc/init.d/logitechmediaserver
 
 			#DietPi-Services init
-			cp /DietPi/dietpi/conf/squeezeboxserver.service /etc/dietpi/dietpi-software/services/squeezeboxserver.service
+			cp /DietPi/dietpi/conf/squeezeboxserver.service /var/lib/dietpi/dietpi-software/services/squeezeboxserver.service
 
 			#Grab our test media for user
 			Download_Test_Media
@@ -11133,7 +11136,7 @@ _EOF_
 
 			#Copy configs and services
 			cp /DietPi/dietpi/conf/brutefir_config /etc/BruteFIR/
-			cp /DietPi/dietpi/conf/brutefir.service /etc/dietpi/dietpi-software/services/brutefir.service
+			cp /DietPi/dietpi/conf/brutefir.service /var/lib/dietpi/dietpi-software/services/brutefir.service
 
 			#Modules
 			echo -e "snd-aloop" > /etc/modules-load.d/brutefir-alsa-loopback.conf
@@ -12831,9 +12834,9 @@ _EOF_
 		INSTALLING_INDEX=166
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
 
-			mkdir -p /etc/dietpi/audiophonics/pi-spc
+			mkdir -p /var/lib/dietpi/dietpi-software/installed/pi-spc
 
-			cat << _EOF_ > /etc/dietpi/audiophonics/pi-spc/sds.sh
+			cat << _EOF_ > /var/lib/dietpi/dietpi-software/installed/pi-spc/sds.sh
 #!/bin/bash
 #DietPi version
 PATH=/usr/bin:/home/pi/wiringPi/gpio:/usr/local/bin
@@ -12872,7 +12875,7 @@ done
 exit 0
 _EOF_
 
-			chmod +x /etc/dietpi/audiophonics/pi-spc/sds.sh
+			chmod +x /var/lib/dietpi/dietpi-software/installed/pi-spc/sds.sh
 
 			cat << _EOF_ > /etc/systemd/system/pi-spc.service
 [Unit]
@@ -12883,7 +12886,7 @@ Type=simple
 StandardOutput=tty
 User=root
 
-ExecStart=/bin/bash -c '/etc/dietpi/audiophonics/pi-spc/sds.sh'
+ExecStart=/bin/bash -c '/var/lib/dietpi/dietpi-software/installed/pi-spc/sds.sh'
 
 [Install]
 WantedBy=multi-user.target
@@ -13646,13 +13649,13 @@ _EOF_
 			rm -R /var/www/dietpicam
 			rm /opt/vc/bin/raspimjpeg
 			rm /usr/bin/raspimjpeg
-			rm /etc/dietpi/dietpi-software/services/raspimjpeg.service
+			rm /var/lib/dietpi/dietpi-software/services/raspimjpeg.service
 			rm /etc/raspimjpeg
 
 		elif (( $1 == 45 )); then
 
 			AGP_ERROR_HANDLED deluged deluge-web deluge-webui deluge-console
-			rm /etc/dietpi/dietpi-software/services/deluge.service
+			rm /var/lib/dietpi/dietpi-software/services/deluge.service
 			rm -R ~/.config/deluge
 
 		elif (( $1 == 94 )); then
@@ -13752,7 +13755,7 @@ _EOF_
 		elif (( $1 == 35 )); then
 
 			AGP_ERROR_HANDLED logitechmediaserver
-			rm /etc/dietpi/dietpi-software/services/squeezeboxserver.service
+			rm /var/lib/dietpi/dietpi-software/services/squeezeboxserver.service
 			rm -R /var/lib/squeezeboxserver
 			rm -R /usr/share/squeezeboxserver
 
@@ -13891,7 +13894,7 @@ _EOF_
 			AGP_ERROR_HANDLED brutefir
 
 			rm -R /etc/BruteFIR
-			rm /etc/dietpi/dietpi-software/services/brutefir.service
+			rm /var/lib/dietpi/dietpi-software/services/brutefir.service
 			rm /etc/asound.conf
 
 			rm /etc/modules-load.d/brutefir-alsa-loopback.conf
@@ -14102,7 +14105,7 @@ _EOF_
 		elif (( $1 == 166 )); then
 
 			rm /etc/systemd/system/pi-spc.service
-			rm -R /etc/dietpi/audiophonics/pi-spc
+			rm -R /var/lib/dietpi/dietpi-software/installed/pi-spc
 
 		elif (( $1 == 167 )); then
 
@@ -14469,8 +14472,8 @@ _EOF_
 		G_AGUG
 
 		#Generate dir for dietpi-software installed "non-service" based control scripts
-		mkdir -p /etc/dietpi/dietpi-software/services
-		chmod -R +x /etc/dietpi/dietpi-software/services
+		mkdir -p /var/lib/dietpi/dietpi-software/services
+		chmod -R +x /var/lib/dietpi/dietpi-software/services
 
 		#Disable software installation, if user input is required for automated installs
 		Install_Disable_Requires_UserInput
