@@ -186,9 +186,6 @@ _EOF_
 
 	G_DIETPI-NOTIFY 2 'Configuring DietPi Directories:'
 
-	# - /etc/dietpi , in process of moving this over to /var/lib/dietpi and /var/tmp/dietpi
-	mkdir -p /etc/dietpi
-
 	# - /var/lib/dietpi : Core storage for installed non-standard APT software, outside of /mnt/dietpi_userdata
 	mkdir -p /var/lib/dietpi
 	chown dietpi:dietpi /var/lib/dietpi
@@ -197,7 +194,13 @@ _EOF_
 	#	Storage locations for program specifc additional data
 	mkdir -p /var/lib/dietpi/dietpi-autostart
 	mkdir -p /var/lib/dietpi/dietpi-config
-	mkdir -p /var/lib/dietpi/dietpi-software
+
+	#mkdir -p /var/lib/dietpi/dietpi-ramlog
+	mkdir -p /var/lib/dietpi/dietpi-ramlog/storage
+
+	#mkdir -p /var/lib/dietpi/dietpi-software
+	mkdir -p /var/lib/dietpi/dietpi-software/services 		#non systemd services for installed software
+	mkdir -p /var/lib/dietpi/dietpi-software/installed		#Additional storage for installed apps, eg: custom scripts and data
 
 	# - /var/tmp/dietpi : Temp storage saved during reboots, eg: logs outside of /var/log
 	mkdir -p /var/tmp/dietpi/logs
