@@ -523,9 +523,6 @@ _EOF_
 
 					rm package.zip
 
-					# - flag
-					echo 1 > /etc/dietpi/.dietpi_rpi
-
 				else
 
 					G_DIETPI-NOTIFY 1 "Failed to install $INPUT_DEVICE_NAME. $install_url_address may be offline or unreachable."
