@@ -28,7 +28,7 @@
 
 	EXIT_CODE=-1
 
-	FP_EXIT_CODE='/etc/dietpi/.ntpd_exit_status'
+	FP_EXIT_CODE='/var/lib/dietpi/.ntpd_exit_status'
 	NTPD_UPDATE_MODE=$(grep -m1 '^ntpd_update_mode=' /DietPi/dietpi.txt | sed 's/.*=//')
 
 	Update_NTPD(){
