@@ -487,14 +487,14 @@ _EOF_
 		/DietPi/dietpi/dietpi-apt-get_update 1
 		#-------------------------------------------------------------------------------
 		#New location for dietpi-software installed "non-service" based control scripts
-		mkdir -p /etc/dietpi/dietpi-software/services
+		mkdir -p /var/lib/dietpi/dietpi-software/services
 
 		# - move to new location, if installed
-		mv /etc/deluge_init /etc/dietpi/dietpi-software/services/deluge.service &> /dev/null
-		mv /etc/raspimjpeg_init /etc/dietpi/dietpi-software/services/raspimjpeg.service &> /dev/null
-		mv /etc/squeezeboxserver_init /etc/dietpi/dietpi-software/services/squeezeboxserver.service &> /dev/null
-		mv /etc/BruteFIR/brutefir.service /etc/dietpi/dietpi-software/services/brutefir.service &> /dev/null
-		chmod -R +x /etc/dietpi/dietpi-software/services
+		mv /etc/deluge_init /var/lib/dietpi/dietpi-software/services/deluge.service &> /dev/null
+		mv /etc/raspimjpeg_init /var/lib/dietpi/dietpi-software/services/raspimjpeg.service &> /dev/null
+		mv /etc/squeezeboxserver_init /var/lib/dietpi/dietpi-software/services/squeezeboxserver.service &> /dev/null
+		mv /etc/BruteFIR/brutefir.service /var/lib/dietpi/dietpi-software/services/brutefir.service &> /dev/null
+		chmod -R +x /var/lib/dietpi/dietpi-software/services
 		#-------------------------------------------------------------------------------
 		#DietPi-Software additions:
 		if (( $(cat /DietPi/dietpi.txt | grep -ci -m1 'AUTO_DietpiSoftware_Install_WEBSERVER_REDIS=') == 0 )); then
@@ -2038,11 +2038,11 @@ _EOF_
 				ln -sf /usr/share/applications/dietpi-launcher.desktop "$HOME"/Desktop/dietpi-launcher.desktop
 
 				#Download icons
-				mkdir -p /etc/dietpi/desktop_icons
-				wget http://dietpi.com/downloads/conf/desktop/dietpi-icon.png -O /etc/dietpi/desktop_icons/dietpi-icon.png
-				wget http://dietpi.com/downloads/conf/desktop/grey_16x16.png -O /etc/dietpi/desktop_icons/grey_16x16.png
-				wget http://dietpi.com/downloads/conf/desktop/kodi-icon.png -O /etc/dietpi/desktop_icons/kodi-icon.png
-				wget http://dietpi.com/downloads/conf/desktop/justboom.png -O /etc/dietpi/desktop_icons/justboom.png
+				mkdir -p /var/lib/dietpi/dietpi-software/installed/desktop_icons
+				wget http://dietpi.com/downloads/conf/desktop/dietpi-icon.png -O /var/lib/dietpi/dietpi-software/installed/desktop_icons/dietpi-icon.png
+				wget http://dietpi.com/downloads/conf/desktop/grey_16x16.png -O /var/lib/dietpi/dietpi-software/installed/desktop_icons/grey_16x16.png
+				wget http://dietpi.com/downloads/conf/desktop/kodi-icon.png -O /var/lib/dietpi/dietpi-software/installed/desktop_icons/kodi-icon.png
+				wget http://dietpi.com/downloads/conf/desktop/justboom.png -O /var/lib/dietpi/dietpi-software/installed/desktop_icons/justboom.png
 
 				#Kodi
 				if (( $(cat /DietPi/dietpi/.installed | grep -ci -m1 '^aSOFTWARE_INSTALL_STATE\[31\]=2') )); then
@@ -2749,10 +2749,6 @@ _EOF_
 		#RPi update DietPi kernel:
 		if (( $G_HW_MODEL < 10 )); then
 
-			# - remove old flags
-			rm /etc/dietpi/.dietpi_rpi &> /dev/null
-			rm /etc/dietpi/.384khz_rpi &> /dev/null
-
 			/DietPi/dietpi/func/dietpi-set_hardware kernel dietpi_rpi
 
 			# Sabre module update
@@ -2876,6 +2872,39 @@ _EOF_
 		#NB: After v160, dietpi-update will do this prior to each update
 		/DietPi/dietpi/func/dietpi-set_software verify_dietpi.txt
 		#-------------------------------------------------------------------------------
+		#FHS changes: https://github.com/Fourdee/DietPi/issues/1297
+		#	APT now IPv4 forced:
+		# - Update core ENV
+		sed -i '/prefer_ipversion=/c\Sprefer_ipversion=ipv4' /DietPi/dietpi.txt
+		/DietPi/dietpi/func/dietpi-set_core_environment
+
+		# - Revert of https://github.com/Fourdee/DietPi/issues/1329#issuecomment-353586754
+		#	Disabled/replaced in /DietPi/dietpi/func/dietpi-set_core_environment generation
+		unset LD_LIBRARY_PATH
+		ldconfig
+
+		# - DietPi-autostart custom script moved
+		mkdir -p /var/lib/dietpi/dietpi-autostart &> /dev/null
+		mv /etc/dietpi/autostart.sh /var/lib/dietpi/dietpi-autostart/custom.sh &> /dev/null
+
+		# - wifi-monitor moved
+		mv /etc/dietpi/dietpi-wifi-monitor.sh /var/lib/dietpi/dietpi-wifi-monitor.sh &> /dev/null
+
+		# - /etc/dietpi/.ntpd_exit_status moved, although, we can simply delete this and have it regened on run
+		rm /etc/dietpi/.ntpd_exit_status &> /dev/null
+
+		# - DietPi-software non-systemD services moved
+		mv /etc/dietpi/dietpi-software/services /var/lib/dietpi/dietpi-software &> /dev/null
+
+		# - Remove kernel flags (not used in our scripts)
+		rm /etc/dietpi/.dietpi_rpi &> /dev/null
+		rm /etc/dietpi/.384khz_rpi &> /dev/null
+
+		# - Desktop icons
+		mv /etc/dietpi/desktop_icons /var/lib/dietpi/dietpi-software/installed/ &> /dev/null
+		sed -i 's#^Icon=/etc/dietpi/desktop_icons#/var/lib/dietpi/dietpi-software/installed/desktop_icons#g' /var/lib/dietpi/dietpi-software/installed/desktop_icons/*.desktop *> /dev/null
+
+		#-------------------------------------------------------------------------------
 		#Sparky SBC patches
 		if (( $G_HW_MODEL == 70 )); then
 
@@ -2940,7 +2969,7 @@ _EOF_
 		#	OC
 		#	Squeezelite
 		#	YMPD
-		#
+		#	Pi-SPC (due to FHS changes, moved script)
 		update-rc.d ympd remove &> /dev/null # switch to systemD
 		rm /etc/init.d/ympd &> /dev/null # switch to systemD
 
@@ -2949,7 +2978,7 @@ _EOF_
 		sudo -u www-data php /var/www/owncloud/occ maintenance:mode --on &> /dev/null
 		sudo -u www-data php /var/www/nextcloud/occ maintenance:mode --on &> /dev/null
 
-		/DietPi/dietpi/dietpi-software reinstall 159 128 124 114 47 36 32
+		/DietPi/dietpi/dietpi-software reinstall 159 128 124 114 47 36 32 166
 		#-------------------------------------------------------------------------------
 		#DietPi-Globals: https://github.com/Fourdee/DietPi/issues/1311
 		if (( ! $(grep -ci -m1 'dietpi-globals' /root/.bashrc) )); then
@@ -2964,21 +2993,6 @@ _EOF_
 			chown dietpi:dietpi /home/dietpi/.bashrc
 
 		fi
-		#-------------------------------------------------------------------------------
-		#FHS changes: https://github.com/Fourdee/DietPi/issues/1297
-		#	APT now IPv4 forced:
-		# - Update core ENV
-		sed -i '/prefer_ipversion=/c\Sprefer_ipversion=ipv4' /DietPi/dietpi.txt
-		/DietPi/dietpi/func/dietpi-set_core_environment
-
-		# - Revert of https://github.com/Fourdee/DietPi/issues/1329#issuecomment-353586754
-		#	Disabled/replaced in /DietPi/dietpi/func/dietpi-set_core_environment generation
-		unset LD_LIBRARY_PATH
-		ldconfig
-
-		# - DietPi-autostart custom script moved
-		mkdir -p /var/lib/dietpi/dietpi-autostart &> /dev/null
-		mv /etc/dietpi/autostart.sh /var/lib/dietpi/dietpi-autostart/custom.sh &> /dev/null
 		#-------------------------------------------------------------------------------
 
 
