@@ -1,12 +1,15 @@
 v160
 (xx/01/18)
 
+Minor notes:
+The XMAS tree has now been taken down, stored away on github for next year. Hope you all had a good one :D
+
 Image Modifications:
 
 Changes / Improvements / Optimizations:
 General | We have completed much needed backbone work for DietPi, which will allow for improved expansion in source code. This includes the use of dietpi-globals.
 DietPi-Globals | New script which optimizes most used DietPi commands and vars, throughout our scripts. Also exported to bash session, please type 'G_' then press 'TAB' to see a full list of options.
-General | Start of FHS compliance: https://github.com/Fourdee/DietPi/issues/1297#issuecomment-352241193
+General | FHS compliance completed. /etc/dietpi has moved to /var/lib/dietpi. RAMlog store has moved to /var/tmp/dietpi: https://github.com/Fourdee/DietPi/issues/1297#issuecomment-352241193
 General | wget: Now set to prefer IPv4 by default (generally faster): https://github.com/Fourdee/DietPi/issues/1285#issuecomment-353230187
 General | APT: Now set to force IPv4 by default (generally faster): https://github.com/Fourdee/DietPi/issues/1285#issuecomment-353230187
 General | SparkySBC: CPU gov default changed to Performance, reports of increased stability.
